--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
       <ul>
         <li><a href="https://github.com/TaniaYash"><i class="fa fa-linkedin fa-2x"></i></a></li>
         <li><a href="https://github.com/TaniaYash"><i class="fa fa-github fa-2x"></i></a></li>
-        <li><a href="https://github.com/TaniaYash"><i class="fa fa-facebook fa-2x"></i></a></li>
+<!--         <li><a href="https://github.com/TaniaYash"><i class="fa fa-facebook fa-2x"></i></a></li> -->
       </ul>
     </div>
     <p class="text-center"><a href="#wrapper" class="gototop"><i class="fa fa-chevron-up fa-2"></i></a></p>
