--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
         <h3>Tetiana Yashchuk</h3>  
         <h3>Kyiv, Ukraine</h3>  
         <h3>e-mail: sirt@ukr.net</h3> 
-        <h3>Telegram.: @_____________</h3>               
+        <h3>Telegram.: @sirt321</h3>               
       </div>
     </div>
 
